// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericInput should be rendered correctly 1`] = `
<div
  className="container uui-input-box -clickable root root size-36 size-36 mode-form uui-theme-loveship"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input uui-value-in-placeholder"
    inputMode="numeric"
    max={10}
    min={1}
    onChange={[Function]}
    placeholder="5"
    tabIndex={0}
    type="number"
    value=""
  />
  <div
    className="uui-numeric-input-button-group"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`NumericInput should be rendered correctly with new props 1`] = `
<div
  className="container uui-input-box -clickable uui-numeric-input-without-arrows root root size-24 size-24 mode-cell uui-theme-loveship"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input alignRight uui-value-in-placeholder"
    inputMode="numeric"
    max={10}
    min={1}
    onChange={[Function]}
    placeholder="5"
    tabIndex={0}
    type="number"
    value=""
  />
</div>
`;
